refactor: add Product component, update Hero, adjust section page numbers, drop overflow-x-hidden

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     body {
       background-color: #E6EFF4;
       color: #4A607C;
+      overflow-x: hidden;
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
     }
